--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     {% include navigation.html %}
-    {{ content }}
+    <div class="content">
+      {{ content }}
+    </div>
   </body>
 </html>
