--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,4 +1,9 @@
 ---
 ---
+@import "variable";
+@import "reset";
+@import "layout";
+@import "home";
+@import "blog";
 @import "main";
 @import "test";
